--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
       <ion-label>View Expenses</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="gallery">
       <ion-icon name="images"></ion-icon>
       <ion-label>Photos</ion-label>
     </ion-tab-button>
