--- a/src/app/view-expenses/view-expenses.page.html
+++ b/src/app/view-expenses/view-expenses.page.html
@@ -24,8 +24,8 @@
       <ion-label>
         Current Expenses Total:
       </ion-label>
-      <ion-chip slot="end">
-        <ion-label>£{{expenseService.totalExpense}}</ion-label>
+      <ion-chip slot="end" color="light">
+        <ion-label >£{{expenseService.totalExpense}}</ion-label>
       </ion-chip>
     </ion-item>
   </ion-list>
