--- a/src/app/detail-expense/detail-expense.page.html
+++ b/src/app/detail-expense/detail-expense.page.html
@@ -14,21 +14,24 @@
     </ion-card-header>  
     <ion-card-content>
       £{{ expense.cost }}
-    </ion-card-content>
-       
+   
+     
+
     <ion-col size="6" 
       *ngIf="photo">
     <ion-img src="{{ photo.base64 ? photo.base64 : photo.webviewPath }}"></ion-img>
-    </ion-col>
+    </ion-col> 
+  
+  </ion-card-content>
   </ion-card>
 
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button expand="full" routerLink="/" routerDirection="back"> Back </ion-button>
+        <ion-button expand="block" routerLink="/" routerDirection="back"> Back </ion-button>
       </ion-col>
       <ion-col>
-        <ion-button expand="full" (click)="delete()">Delete
+        <ion-button expand="block" (click)="delete()">Delete
         </ion-button>
       </ion-col>     
     </ion-row>
