--- a/src/app/new-expense/new-expense.page.html
+++ b/src/app/new-expense/new-expense.page.html
@@ -25,22 +25,27 @@
 
     <ion-item>
       <ion-label position="stacked">Cost</ion-label>
-      <ion-input type="test" formControlName="cost" name="cost"> </ion-input>
+      <ion-input  formControlName="cost" name="cost">£ </ion-input>
     </ion-item>
   </ion-list>
 
+  <ion-col size="6" 
+      *ngIf="photo">
+    <ion-img src="{{ photo.base64 ? photo.base64 : photo.webviewPath }}"></ion-img>
+  </ion-col>
+  
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button expand="full" routerLink="/" routerDirection="back"> Back </ion-button>
+        <ion-button expand="block" (click)="back()"> Back </ion-button>
       </ion-col>
       <ion-col>
-        <ion-button expand="full" (click)="takePhoto()">
+        <ion-button expand="block" (click)="takePhoto()">
           <ion-icon name="camera"></ion-icon>
         </ion-button>
       </ion-col>
       <ion-col>
-        <ion-button expand="full" type="submit" [disabled]="!expenseForm.valid" 
+        <ion-button expand="block" type="submit" [disabled]="!expenseForm.valid" 
         (click)="addExpense()">Submit</ion-button>
       </ion-col>
     </ion-row>
