--- a/src/app/view-expenses/view-expenses.page.html
+++ b/src/app/view-expenses/view-expenses.page.html
@@ -15,26 +15,14 @@
 <ion-content>
   <ion-list *ngFor="let expense of expenseService.expenses">    
   <ng-container [ngSwitch]="expense.type">
-    <ion-item (click)="onSelect(expense)" class="select" *ngSwitchCase="'meal'">        
-      <ion-icon slot="start" name="restaurant-outline"></ion-icon>
-      <ion-label><h2>{{expense.description}}</h2><p>{{expense.type | titlecase}} Submitted: {{expense.id | date}}</p></ion-label>
-      <ion-chip slot="end"><ion-label>£{{expense.cost}}</ion-label></ion-chip>
-    </ion-item>
-    <ion-item (click)="onSelect(expense)" class="select" *ngSwitchCase="'travel'">        
-      <ion-icon slot="start" name="airplane-outline"></ion-icon>
-      <ion-label><h2>{{expense.description}}</h2><p>{{expense.type | titlecase}} Submitted: {{expense.id | date}}</p></ion-label>
-      <ion-chip slot="end"><ion-label>£{{expense.cost}}</ion-label></ion-chip>
-    </ion-item>
-    <ion-item (click)="onSelect(expense)" class="select" *ngSwitchCase="'accomodation'">        
-      <ion-icon slot="start" name="bed-outline"></ion-icon>
-      <ion-label><h2>{{expense.description}}</h2><p>{{expense.type | titlecase}} Submitted: {{expense.id | date}}</p></ion-label>
-      <ion-chip slot="end"><ion-label>£{{expense.cost}}</ion-label></ion-chip>
-    </ion-item>
-    <ion-item (click)="onSelect(expense)" class="select" *ngSwitchCase="'misc'">        
-      <ion-icon slot="start" name="copy-outline"></ion-icon>
-      <ion-label><h2>{{expense.description}}</h2><p>{{expense.type | titlecase}} Submitted: {{expense.id | date}}</p></ion-label>
-      <ion-chip slot="end"><ion-label>£{{expense.cost}}</ion-label></ion-chip>
-    </ion-item>
+    <ion-item (click)="onSelect(expense)" class="select">        
+      <ion-icon slot="start" *ngSwitchCase="'meal'" name="restaurant-outline"></ion-icon>
+      <ion-icon slot="start" *ngSwitchCase="'travel'" name="airplane-outline"></ion-icon>      
+      <ion-icon slot="start" *ngSwitchCase="'accomodation'" name="bed-outline"></ion-icon>
+      <ion-icon slot="start" *ngSwitchCase="'misc'"  name="copy-outline"></ion-icon>  
+      <ion-label><h2>{{expense.description}}</h2><p>Submitted: {{expense.id | date}}</p></ion-label>
+      <ion-chip slot="end"><ion-label>{{expense.cost | currency:'£'}}</ion-label></ion-chip>
+    </ion-item>      
   </ng-container>
   </ion-list>
 
